# UrbanFlow-AU

./: .gitignore  README.md  alembic.ini  pyproject.toml  urbanflow-au_requirements.md
.github/workflows/: ci.yml
docs/: development_workflow.md
docs/examples/modeling/: lightgbm_evaluation_report.md  lightgbm_evaluation_summary.json  ridge_evaluation_report.md  ridge_evaluation_summary.json
docs/superpowers/evaluations/: 2026-06-29-postgresql-persistence-closeout.md  2026-07-12-mlflow-tracking-closeout.md
docs/superpowers/plans/: 2026-06-21-project-foundation.md  2026-06-25-sensor-location-pipeline.md  2026-06-25-sensor-locations-ingestion.md  2026-06-26-nullable-sensor-installation-date.md  2026-06-26-sensor-location-runner.md  2026-06-27-data-validation.md  2026-06-27-hourly-count-ingestion.md  2026-06-28-postgresql-persistence.md  2026-06-30-leakage-safe-features-evaluation.md  2026-06-30-prefect-orchestration.md  2026-07-01-ridge-baseline.md  2026-07-02-ridge-evaluation-cli.md  2026-07-02-ridge-evaluation-report.md  2026-07-03-ridge-report-example.md  2026-07-03-ridge-report-mermaid.md  2026-07-04-seasonal-naive-comparison.md  2026-07-11-mlflow-tracking.md  2026-07-12-fastapi-forecast-serving.md  2026-07-14-postgres-api-repositories.md  (+1 more)
migrations/: env.py
migrations/versions/: 20260628_0001_create_core_tables.py
scripts/: evaluate_lightgbm_baseline.py  evaluate_ridge_baseline.py  export_lightgbm_artifact.py  ingest_hourly_counts.py  ingest_sensor_locations.py  load_snapshot_to_db.py  render_lightgbm_evaluation_report.py  render_ridge_evaluation_report.py  run_ingestion_flow.py  smoke_test_lightgbm_forecast.py  smoke_test_postgres_api.py  smoke_test_postgres_persistence.py  track_modeling_evaluation.py  validate_snapshot.py
src/urbanflow/: __init__.py
tests/: conftest.py
tests/unit/: test_package.py
(+145 files in other folders)
