[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "urbanflow-au"
dynamic = ["version"]
description = "Melbourne pedestrian demand forecasting and MLOps platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "UrbanFlow AU contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]

[tool.setuptools.dynamic]
version = { attr = "urbanflow.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
